--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
      <meta charset="utf-8">
      <title>Мой первый сайт</title>
-
+<meta property="og:description" content="структура сайта" />
+<link rel="canonical" href="https://webheroschool.github.io/HTML-Galeeva/" />
 </head>
 
 <body>
