--- a/index.html
+++ b/index.html
@@ -1,17 +1,56 @@
 <!DOCTYPE html>
 <html>
-
-
-
-  <head>
+<head>
     <meta charset="utf-8">
 
-    <title>Мой первый сайт</title>
+    title>Мой первый сайт</title>
+<body>
 
+ <header>
+
+ <div></div>
+
+ <nav>
+
+ <a></a>
+
+ <a></a> 
+WebHero
+School
+ <a></a>
+
+ <a></a>
+
+ <a></a>
+
+ <a></a>
+
+ </nav>
+
+ </header>
+ <section>
+
+ <main>
+
+ <h1></h1>
+
+ <p></p>
+
+ <button></button>
+
+ </main>
+
+ <div>
+
+ <img>
+
+ </div>
+
+ </section>
+
+</body>
 
 </nav>
-
-
 
   </head>
 
